--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,8 @@ footer{
     width:100%;
     height:100px;  
 }
+
+
 .sidebar{
     height: 100%;
     display:flex;
@@ -26,6 +28,26 @@ footer{
     background-color: rgb(230, 230, 230);
     padding-top: 5vh;
 }
+
+.sidebar-item{
+    display: flex;
+    border-style:solid;
+    border-color: rgb(209, 209, 209);
+    border-width: 1px 0px;
+    padding-left: 20px;
+    align-items: center;
+    padding: 10px 20px 10px;
+}
+
+.sidebar-item-icon{
+    height: 1.5em;
+}
+
+.sidebar-item-text{
+    margin: 8px;
+}
+
+
 
 body{
     margin:0;
@@ -48,9 +70,4 @@ body{
     margin-right: 8px;
 }
 
-.nav-item{
-    text-align: center;
-    border-style:solid;
-    border-color: rgb(209, 209, 209);
-    border-width: 1px 0px;
-}
+
