--- a/styles.css
+++ b/styles.css
@@ -4,29 +4,40 @@
     
     border-style: solid;
     border-color:rgb(255, 179, 227);
-    position:fixed;
+    position:absolute;
+    
+    width:100%;
+    z-index: 10;
 }
 header{
     border-width: 0 0 5vh 0;
     top:0;
-    width:100%;
-    height:100px;  
+     
 }
 footer{
     border-width: 5vh 0 0 0;
     bottom:0;
-    width:100%;
-    height:100px;  
+      
 }
 
 
 .sidebar{
+
+    width:100%;
+    position: absolute;
+    grid-column: auto / span 2;
+    left:-101%;
+    transition: transform 1s; 
     height: 94%;
     display:flex;
     flex-direction: column;
     align-items: stretch;
     background-color: rgb(230, 230, 230);
     padding-top: 5vh;
+    overflow-y: auto;
+    z-index:5;
+    box-shadow: rgb(85 85 85 / 37%) 5px 5px 4px; 
+    
 }
 
 .sidebar-item{
@@ -47,27 +58,93 @@ footer{
     margin: 8px;
 }
 
+.sidebar-tab{
+
+    display:flex;
+    transition: transform 1s; 
+    flex-direction: row;
+    position: absolute;
+    height: 35px;
+    width: 60px;
+    bottom: 11vh;
+    background-color: rgb(230, 230, 230);
+    left: -2%;
+    border-radius: 0 10px 10px 0;
+    z-index:6;
+    box-shadow: rgb(85 85 85 / 37%) 5px 5px 4px; 
+}
+
+
+
+.sidebar-tab-icon{
+
+    height: 1.3em;
+    align-self: center;
+    margin-left: 35px;
+    
+}
+
+.sidebar-open{
+        
+    transform: translateX(101vw);
+
+}
 
 
 body{
     margin:0;
     background-color:  rgb(27, 190, 255);
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    overflow: hidden;
+    
 }
 
+#wrapper{
+    position:relative;
+    overflow: hidden;
+}
+
+
 .main-div{
+
+    display:block;
+    
+
     background-color: white;
     height:80.2vh;
-    margin: 9.9vh 0px 10vh 0px;
-    display:grid;
+    margin: 9vh 0px 10vh 0px;
     grid-template-columns: 285px auto;
     grid-template-rows: 100%;
-    column-gap: 8px;
 
 }
 .content{
     overflow: auto;
     overflow-y: auto;
-    margin-right: 8px;
+    margin: 0px 8px;
+    height:99%;
+    padding-top:1vh;
+    
 }
 
+
+
+@media only screen and (min-width: 600px) {
+
+    .sidebar{
+        
+        grid-column: auto;
+        position: relative;
+        left:0;
+        
+
+    }
+    .main-div{
+        display:grid;
+    }
+    .sidebar-tab{display:none;} 
+    
+
+}
 
